--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 
 *.shader linguist-language=None
 *.shaderlab linguist-language=None
-*.hlsl linguist-language=None
+*.cginc linguist-language=None
